fix: adicionado z-index

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -6,6 +6,7 @@ header {
   top: 0;
   background-color: var(--white);
   transition: all 0.3s ease;
+  z-index: 2059;
   &.fixed {
     box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.05);
     backdrop-filter: blur(10px);
